fix: container wrap in safari < 11

--- a/assets/scss/elements/_content.scss
+++ b/assets/scss/elements/_content.scss
@@ -85,6 +85,7 @@ pre {
 
   ul, ol {
     padding-left: $spacing-sm;
+
     li {
       line-height: 2em;
       margin-bottom: $spacing-xs;
@@ -158,5 +159,8 @@ hr {
 @mixin content--laptop() {
   .neve-main > .container .col {
     max-width: 70%;
+  }
+  .neve-main > .container > .row {
+    flex-wrap: nowrap;
   }
 }
