--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2263,6 +2263,10 @@ hr {
     max-width: 70%;
   }
 
+  .neve-main > .container > .row {
+    flex-wrap: nowrap;
+  }
+
   .navbar-toggle-wrapper {
     display: none;
   }
